<resources>
    <string name="app_name">MyUITest</string>
    <string name="name_label">Name:   </string>
    <string name="age_label">Age:    </string>
    <string name="height_label">Height: </string>
    <string name="delete_button_text">Delete</string>
    <string name="show_button_text">Show</string>
    <string name="info_heading">Information</string>
    <string name="info">Hello,My name is %1$s, I am %2$s years old, and my height is %3$s.</string>
    <string name="return_button">Return</string>

    <string name="setting_menu">Setting</string>
    <string name="new_menu">New</string>
    <string name="print_menu">Print</string>
    <string name="mail_menu">Mail</string>
    <string name="save_button_text">Save</string>

    <string name="person_age_height">age: %1$s height: %2$s</string>
</resources>